@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
-<testsuite name="test_error_output" errors="5" failures="0" tests="5" time="0.078" hostname="unknown" timestamp="2016-04-25T17:51:53">
+<testsuite name="test_error_output" errors="5" failures="0" tests="5" time="0.078" hostname="unknown" timestamp="2016-04-26T12:01:19">
   <properties/>
   <testcase classname="test_error_output" name="test_special_characters">
     <error><![CDATA[This some special characters: !"§$%&/()=?. Enjoy.
