@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
-<testsuite name="test_errorfail_output" errors="1" failures="1" tests="1" time="0.031" hostname="unknown" timestamp="2016-04-25T17:51:53">
+<testsuite name="test_errorfail_output" errors="1" failures="1" tests="1" time="0.031" hostname="unknown" timestamp="2016-04-26T12:01:19">
   <properties/>
   <testcase classname="test_errorfail_output" name="test_success">
     <error><![CDATA[Error in tear_down fixture:
