@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
-<testsuite name="test_failure_output" errors="1" failures="33" tests="34" time="20.358" hostname="unknown" timestamp="2016-04-25T17:52:14">
+<testsuite name="test_failure_output" errors="1" failures="33" tests="34" time="6.147" hostname="unknown" timestamp="2016-04-26T12:01:25">
   <properties/>
   <testcase classname="test_failure_output" name="test_empty">
     <failure><![CDATA[Expected empty expression was actually: 3.
