@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
-<testsuite name="test_success_output" errors="0" failures="0" tests="1" time="0.015" hostname="unknown" timestamp="2016-04-25T17:52:14">
+<testsuite name="test_success_output" errors="0" failures="0" tests="1" time="0.016" hostname="unknown" timestamp="2016-04-26T12:01:25">
   <properties/>
   <testcase classname="test_success_output" name="test_success"/>
   <system-out/>
